# crane_x7_ros

./: README_robot_design3.md
crane_x7/: package.xml
crane_x7_control/scripts/: preset_reconfigure.py
crane_x7_edge/: CMakeLists.txt  package.xml
crane_x7_edge/src/: README.md  ReADME.md  crane_x7_pick_and_place_demo.py  opencv.cpp  opencv_fp.cpp  opencv_fp_1.cpp  opencv_fpf.cpp  ros_edg.py  set.py
crane_x7_edge/src/else/: crane_x7_pick_and_place_demo_1.py  feature.cpp  of.cpp  opencv.cpp
crane_x7_examples/: README_robot.md  README_robot_design3.md
crane_x7_examples/scripts/: crane_x7_pick_and_place_demo.py  crane_x7_pick_and_place_demo2.py  crane_x7_pick_and_place_demo2_example.py  crane_x7_pick_and_place_demo3.py  msg_model_see.py  pick_and_place_in_gazebo_example_rob3.py  point.py  show.py  teaching_example.py
crane_x7_gazebo/launch/: crane_x7_with_table.launch
crane_x7_gazebo/worlds/: table2.world
crane_x7_robot_design3/: CMakeLists.txt  package.xml
crane_x7_robot_design3/src/: explore_move.py  pick_up_move.py
